<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mushtaqmir.app4.StartActivity">
<ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <android.support.constraint.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:foregroundGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/indicate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="55dp"
            android:gravity="center_horizontal"
            android:text="@string/indicateStr"
            app:layout_constraintBottom_toTopOf="@+id/fuelTypeRadioGroup" />


        <RadioGroup
            android:id="@+id/fuelTypeRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="295dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="100dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/indicate">


            <RadioButton
                android:id="@+id/fuelTypePetrol"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="57dp"
                android:width="320dp"
                android:checked="false"
                android:text="@string/fuelTypePetrolStr"
                tools:layout_editor_absoluteX="34dp"
                tools:layout_editor_absoluteY="145dp" />

            <RadioButton
                android:id="@+id/fuelTypeDiesel"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:width="320dp"
                android:checked="false"
                android:text="@string/fuelTypeDieselStr"
                tools:layout_editor_absoluteX="265dp"
                tools:layout_editor_absoluteY="163dp" />
        </RadioGroup>

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="258dp"
        android:text="@string/StartButtonStr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fuelTypeRadioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    </android.support.constraint.ConstraintLayout>
</ScrollView>

</android.support.constraint.ConstraintLayout>
